# keyphrases-mcp

./: .dockerignore  .env-example  .envrc  .gitignore  .tool-versions  Dockerfile  Dockerfile-glama  LICENSE  Makefile  README.md  glama.json  pyproject.toml  pytest.ini  server.json  smithery.yaml
.github/workflows/: pulsemcp-publish.yml  pypi-publish.yml
docs/: configuration.md  development-and-testing.md  integration.md  mcp-tools.md
openai_agents_sdk/: keyphrases_assistant.py
scripts/: pulsemcp_sync_version.py  pulsemcp_validate_server_json.py
src/: config.py  main.py  server.py
src/core/: extractor.py
tests/: test_file_processor.py  test_server.py
tests/fixtures/: transforming_human_capital.md
